[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
anyhow = "1.0.51"
itertools = "0.10.1"
indoc = "1.0"
pathfinding = "3.0.5"
rustc-hash = { version = "1.0"}

[profile.release]
debug = 1
